# algos-ds

./: .gitignore  CMakeLists.txt  README.md
algo_implementations/: main.cpp
algo_implementations/searches/: binarysearch.h  cyclicsearch.h  infinitesearch.h  interpolationsearch.h
algo_implementations/sorts/: binaryquicksort.h  countingsort.h  countsort.h  heapsort.h  insertionsort.h  mergesort.h  parallelmerge.h  quicksort.h  selectionsort.h  shellsort.h  sorteermethode.h
algo_implementations/util/: chrono.h  sortvector.h
test/vraag1/: IsolationRange.h  lijst.h  lijsttest.cpp
test/vraag2/: Deksel.cpp  DiameterComparison.cpp  Pot.cpp  matcher.cpp  test.cpp
test/vraag3/lib/: chrono.h
test/vraag3/src/: 1.txt  1_almost_solved.txt  1_solved.txt  Sudoku.h  SudokuSolverBitMap.h  SudokuSolverMap.h  SudokuSolverNaive.h  diagonal.txt  invalid.txt  main.cpp
test/vraag3/src/sudokus/: 50.txt
test/vraag4/src/: containers.h  hashfunctions.h  main.cpp
test/vraag4/src/isbn/: 100.py  101.py  102.py  103.py  106.py  107.py  108.py  111.py  114.py  115.py  117.py  (+119 more)
test/vraag5/fixtures/: animals_invalid.txt  animals_invalid_large.txt  animals_large.txt  animals_medium.txt  animals_small.txt  best.txt  worst.txt
test/vraag5/src/: binarytree.h  containers.h  main.cpp  optimization1.h  optimization2.h
week-1/: lijst.h  lijsttest.cpp
week-2/: csv.h  insertionsort.h  intstring.h  main.cpp  mergesort.h  parallelmerge.h  shellsort.h  sorteermethode.h  sortvector.h
week-2/searches/: binarysearch.h
week-2/sorts/: sorteermethode.h  stlsort.h
week-2/util/: stlsort.h
(+765 files in other folders)
